# FastAPI-RabbitMQ-Bridge

./: Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
app/: handler.py  logger.py  rabbit.py  router.py  routers.py  schemas.py  settings.py
app/services/: params_normalizer.py  rabbit_mq.py
tests/: conftest.py  test_api.py  test_handler.py  test_params_normalizer.py  test_rabbit_mq.py
