[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "fastapi-rabbitmq-bridge"
version = "0.1.0"
description = "GET bridge: query params to RabbitMQ handler-queue"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "uvicorn[standard]>=0.34.0",
]
